ui/src/components/InfoPanel/InfoPanel.css
/*
 * Copyright 2018 - 2021 Swiss Federal Institute of Technology Lausanne (EPFL)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0.
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * This open source software code was developed in part or in whole in the
 * Human Brain Project, funded from the European Union's Horizon 2020
 * Framework Programme for Research and Innovation under
 * Specific Grant Agreements No. 720270, No. 785907, and No. 945539
 * (Human Brain Project SGA1, SGA2 and SGA3).
 *
 */

.kgs-info {
    display: block;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.15);    
    z-index: 2000;
}

.kgs-info__panel {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    box-sizing: border-box;
    color: var(--color-26);
    background-color: var(--background-color-2);
}

.kgs-info__container {
    position: relative;
    width: 100%;
    height: 100%;
    padding: 42px 0 10px 0;
}

.kgs-info__content {
    display: block;
    width: 100%;
    height: 100%;
    padding: 0 20px;
    overflow: hidden;
    overflow-y: auto;
}

.kgs-info__content code {
    color: var(--code-color);
    background-color: var(--code-background-color);
}

.kgs-info__closeButton {
    position: absolute;
    top: 5px;
    right: 5px;
    width: 40px;
    height: 40px;
    border: 0;
    margin: 0;
    background-color: transparent;
    color: var(--color-19);
    text-align: center;
    z-index: 1500;
}

.kgs-info__closeButton:hover {
    color: var(--color-20);
}

@media (min-width:768px) { 
    .kgs-info__panel {
        top: 20px;
        right: 20px;
        bottom: 20px;
        left: 20px;
        border-radius: 4px;
        box-shadow: 3px 3px 6px var(--box-shadow-2);
    }
    
    .kgs-info__content {
        padding: 0 var(--site-margin);
    }
}

@media (min-width: 992px) {
    .kgs-info__panel {
        width: 992px;
        margin-left: calc(50% - 496px - 20px);
    }
}

